# franceservices-backend

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  LICENCE  Makefile  README.md  bootstrap.py  commands.py  corpus-results.csv  gpt.py  main.py  merged-eval.py  pyalbert.py  pyproject.toml  q_and_a.csv  questions-test.csv  requirements.txt  requirements_dev.txt
_data/: .gitignore
api/: .gitignore  Dockerfile  README.md  Readme.md  app_spp.py  archive_got.json  clean.sh  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  start.sh  test.py
api/alembic/: env.py
api/alembic/legacy_version_1/: 0af622cc7d70_v5.py
api/alembic/versions/: 1513c97a0139_v02_27_24.py  23a31b54a0a3_.py  2592138760af_added_fields_to_feeback.py  2f54c357b7fe_v4.py  324c40362d79_second_revision.py  40fcf98bde4c_.py  4ad236ae1213_third_revision.py  7a8b4bfe792e_.py  7c2f9941f8da_v3.py  7e8bb3003468_initial_migration.py  8079b4c73914_v3_1.py  8c1a759aa16f_merge_heads_23a31b54a0a3_and_.py  8e2a9a682bab_v4_fix.py  8eb351ec0fd8_first_revision.py  90479cfbcf9f_.py  92ecafbb1549_update_chat_model_with_operators_as_json.py  9d78427dfb52_change_user_id_type_in_stream_table_to_.py  a5c21e5ed309_merge_heads_8c1a759aa16f_and_.py  c2724d7a4ab4_update_feedback_to_receive_positives_.py  ca390c84606d_remove_relations_with_user_model_update_.py  cb25c63a824f_sids_filters.py  ec990afd8da6_change_user_id_type_in_chats_table_to_.py  eff9bf7b048e_.py  f1ec44cacbfe_update_feedback_to_receive_positives_.py
api/app/: .env.example  auth.py  config.py  deps.py  main.py
api/app/clients/: api_vllm_client.py  keycloak_mail_client.py  mailjet_client.py
api/app/core/: __init__.py  acronyms.py  config.py  embeddings.py  indexes.py  institutions.py  llm.py  llm_gpt4all.py  rag.py
api/app/crud/: __init__.py  chat.py  feedback.py  login.py  stream.py  user.py
api/app/db/: base.py  create_admin_user.py  init_db.py  session.py
api/app/endpoints/: chat.py  feedback.py  login.py  misc.py  openai.py  others.py  search.py  stream.py  user.py
api/app/keycloak/: clients.py
api/app/mockups/: __init__.py  mailjet_mockup.py
api/app/models/: __init__.py  chat.py  feedback.py  login.py  stream.py  user.py
api/app/schemas/: __init__.py  chat.py  feedback.py  login.py  others.py  search.py  stream.py  user.py
api/app/tests/: conftest.py  test_api.py  test_class.py
api/app/tests/cases/: archive.json
api/app/tests/endpoints/: test_chat.py  test_login.py  test_misc.py  test_openai_v1.py  test_stream.py  test_user.py
api/app/tests/mockups/: analysis_prompt_template.jinja  elasticsearch.py  keycloak-openapi.yml  llm.py  openai-openapi.yaml  proconnect.py  prompt_config.yml  qdrant.py  rag_gt_prompt_template.jinja  rag_prompt_template.jinja
api/app/tests/utils/: chat.py  feedback.py  login.py  misc.py  openai.py  stream.py  user.py
api/helpers/redis/: csrf_middleware.py  redis_session_middleware.py
api/static/: styles.css
api/templates/: index.html
api_vllm/: Dockerfile  README.md  requirements.txt  test_chat_vllm.py  test_vllm.py
commons/: __init__.py  api.py  embeddings.py  openai_api.py  prompt.py  prompt_albert.py  prompt_base.py  prompt_fabrique.py  prompt_operators.py  search_engines.py
contrib/gpt4all/: Dockerfile  app.py  core.py  pyproject.toml
corpus_generation/: __init__.py  _main.py  generate-albert-light.py  generate_mistral_question.py  generate_mistral_summary.py  llm_generation.py  params.py  prompt_generation.py  update-albert-light.py
databases/: README.md  docker-compose.yml
deployment/: default.yml  (+2 more)
embeddings/: .env.example  Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
llm/: .env.example  Dockerfile  README.md  app.py  deploy.sh  docker-compose.yml  pyproject.toml  setup.sh  test.sh
llm/gpt4all/: Dockerfile  app.py  pyproject.toml  requirements.txt
llm/tests/: test_chat_vllm.py  test_embeddings_endpoint.py  test_generate_endpoint.py  test_heath_endpoint.py  test_models_endpoint.py
llm/vllm/: Dockerfile  app.py  pyproject.toml  requirements.txt
pyalbert/: .env.example  README.md  Readme.md  __init__.py  __main__.py  _logging.py  _version.py  albert.py  config.py  pyproject.toml  requirements.txt  setup.sh  utils.py
pyalbert/clients/: __init__.py  albert.py  llm_v1.py  openai.py
pyalbert/config/: llm_routing_table.prod.json  llm_routing_table.staging.json  rag_sources.json  vllm_routing_table.json  whitelist_config.json
pyalbert/corpus/: __init__.py  _download_rag_sources.py  loader.py  parser.py  text_spliter.py
pyalbert/index/: __init__.py  _create_index.py  commons.py  elasticsearch.py  qdrant.py
pyalbert/lexicon/: __init__.py  mfs_organizations.py  operators_fs.py
pyalbert/models/: __init__.py  _download_models.py
pyalbert/outscale/: unlink_gpu.sh
pyalbert/postprocessing/: __init__.py  _create_whitelist.py  _download_directory.py  _postprocessing.py
pyalbert/prompt/: __init__.py  postprocessing.py  prompt.py  prompt_operators.py
pyalbert/prompt/examples/: prompt_config.yml  rag_prompt_template.jinja  tell_rag_prompt.jinja
pyalbert/prompt/templates/: prompt_config.yml  rag_gt_prompt_operators_llama_template.jinja  rag_gt_prompt_operators_template.jinja  rag_gt_prompt_template.jinja  rag_prompt_template.jinja
pyalbert/schemas/: __init__.py  llm.py
pyalbert/schemas/openai/: __init__.py  api_rag.py  api_v1.py  protocol.py  protocol_rag.py  sampling_params.py
pyalbert/scripts/: _ir.py  _ner.py  auto-chat-name.py  chat.py  extract.py  prompt_preprocess.py  rebuild_prompt.py  search.py  setup-vector-store.sh  stream-api.py  stream.py  update_qdrant_payload.py
pyalbert/sources/: __init__.py  _create_whitelist.py  _download_whitelist_ressources.py
pyalbert/tests/: auto-chat-name.py  prompt_config.yml  prompt_preprocess.py  search.py  stream.py  test_main.py
pyalbert/utils/: acronyms_to_json.py  create_python_file.sh  update_qdrant_payload.py  upload_model.py
pyalbert/whitelist/: __init__.py  _create_whitelist.py  _download_directory.py
(+161 files in other folders)
