[project]
name = "albert-api"
version = "2.0.0"
description = "Albert API"
authors = [{ name = "Etalab", email = "etalab@modernisation.gouv.fr" }]
dependencies = [
    "alembic==1.12.0",
    "elasticsearch==8.9.0",
    "email-validator==2.0.0.post2",
    "fastapi==0.110.0",
    "gpt4all==2.0.2",
    "mailjet-rest==1.3.4",
    "bcrypt==4.1.2",
    "pydantic==2.6.4",
    "pydantic-core==2.16.3",
    "python-jose==3.3.0",
    "psycopg2-binary==2.9.8",
    "qdrant-client==1.5.4",
    "requests==2.31.0",
    "spacy>=3.7.4",
    "SQLAlchemy==2.0.20",
    "uvicorn==0.23.2",
    "python-dotenv==1.0.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
exclude = [ "alembic/versions/" ]

[tool.ruff.lint]
ignore-init-module-imports = true

[tool.ruff.lint.isort.sections]
api = ["app"]
pyalbert = ["pyalbert"]

[tool.setuptools]
py-modules = []

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["pytest>=7.4.4", "pytest-cov>=4.1.0", "ruff>=0.2.1"]

[tool.rye]
managed = true
dev-dependencies = ["pytest>=7.4.4", "pytest-cov>=4.1.0", "ruff>=0.2.1"]
