[project]
name = "albert-api"
version = "0.5.1"
description = "Albert API"
authors = [{ name = "Etalab", email = "etalab@modernisation.gouv.fr" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "alembic==1.13.2",
    "elasticsearch==8.14.0",
    "email-validator==2.2.0",
    "fastapi==0.111.1",
    "mailjet-rest==1.3.4",
    "bcrypt==4.1.3",
    "pydantic==2.8.2",
    "python-jose==3.3.0",
    "psycopg2-binary==2.9.9",
    "qdrant-client==1.10.1",
    "requests==2.32.3",
    "spacy==3.7.5",
    "SQLAlchemy==2.0.31",
    "sqlalchemy-utils==0.41.2",
    "uvicorn==0.30.1",
    "lz4==4.3.3",
    "pyalbert==0.7.10",
    "itsdangerous==2.2.0",
    "redis==5.1.1",
    "authlib==1.3.2",
    "pyjwt==2.9.0",
    "faker==30.8.0"
]

# Tests

[project.optional-dependencies]
test = ["pytest==8.2.2", "pytest-asyncio==0.23.8"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Linter

[tool.ruff]
line-length = 100
exclude = ["alembic/versions/"]

[tool.ruff.lint]
ignore-init-module-imports = true

[tool.ruff.lint.isort.sections]
api = ["app"]
pyalbert = ["pyalbert"]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
  "api",
  "pyalbert",
]

[tool.setuptools]
py-modules = []

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["pytest==7.4.4", "pytest-cov==4.1.0", "ruff==0.2.1"]

[tool.rye]
managed = true
dev-dependencies = ["pytest==7.4.4", "pytest-cov==4.1.0", "ruff==0.2.1"]
