[project]
name = "albert-api-embeddings"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "Etalab", email = "etalab@modernisation.gouv.fr"},
]
dependencies = [
    "accelerate==0.28.0",
    "torch==2.0.1",
    "uvicorn==0.23.2",
    "fastapi==0.103.1",
    "transformers==4.38.1",
    "huggingface-hub==0.20.3",
    "numpy==1.26.4",
]
requires-python = "==3.10.*"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore-init-module-imports = true

[tool.ruff.lint.isort.sections]
pyalbert = ["pyalbert"]
