[project]
name = "albert-llm"
version = "0.1.0"
description = "Albert LLM API"
authors = [
    {name = "Etalab", email = "etalab@modernisation.gouv.fr"},
]
dependencies = [
    "vllm==v0.4.0",
    "pyyaml==6.0.1",
    "accelerate==0.28.0",
    "fastapi==0.103.1",
    "huggingface-hub==0.20.3",
]
requires-python = "==3.10.*"
license = {text = "MIT"}

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore-init-module-imports = true

[tool.ruff.lint.isort.sections]
pyalbert = ["pyalbert"]
