[project]
name = "albert-llm"
version = "0.1.0"
description = "Albert LLM API"
authors = [
    {name = "Etalab", email = "etalab@modernisation.gouv.fr"},
]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "vllm==v0.4.2",
    "pyyaml==6.0.1",
    "accelerate==0.30.0",
    "fastapi==0.111.0",
    "huggingface-hub==0.20.3",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore-init-module-imports = true

[tool.ruff.lint.isort.sections]
pyalbert = ["pyalbert"]
core = ["core"]
