[project]
name = "albert-llm"
version = "0.1.0"
description = "Albert LLM API"
authors = [
    {name = "Etalab", email = "etalab@modernisation.gouv.fr"},
]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch == 2.3.0",
    "xformers == 0.0.26.post1",
    "vllm-flash-attn == 2.5.9",
    "vllm==v0.5.0",
    "pyyaml==6.0.1",
    "accelerate==0.30.0",
    "fastapi==0.111.0",
    "huggingface-hub==0.23.3",
    "pyalbert==0.4.12",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore-init-module-imports = true

[tool.ruff.lint.isort.sections]
pyalbert = ["pyalbert"]
core = ["core"]
