[project]
name = "pyalbert"
version = "0.1"
description = "The Albert toolkit -- CLI, libraries and lexicons"
authors = [
    {name = "Etalab", email = "etalab@modernisation.gouv.fr"},
]
dependencies = [
    "huggingface-hub==0.20.3",
    "docopt-ng==0.9.0",
    "wget==3.2",
    "elasticsearch==8.9.0",
    "qdrant-client==1.5.4",
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.1.0",
    "tiktoken==0.6.0",
    "nltk==3.8.1",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "langchain==0.1.12",
    "python-dotenv==1.0.1"
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
pyalbert = "pyalbert.albert:main"

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
exclude = [ "lexicon/" ]

[tool.ruff.lint]
ignore-init-module-imports = true
