[project]
name = "pyalbert"
version = "0.4.0"
description = "The Albert toolkit -- CLI, libraries and lexicons"
authors = [
    {name = "Etalab", email = "etalab@modernisation.gouv.fr"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "docopt-ng==0.9.0",
    "wget==3.2",
    "elasticsearch==8.9.0",
    "qdrant-client==1.5.4",
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.1.0",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "langchain-text-splitters==0.0.1",
    "python-dotenv==1.0.1",
    "jinja2==3.1.4",
    "lz4==4.3.3",
]

[tool.pdm.dev-dependencies]
dev = [
    "huggingface-hub==0.23.0", 
    "prompt_toolkit==3.0.39", 
]

[project.scripts]
pyalbert = "pyalbert.albert:main"

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
exclude = [ "lexicon/" ]

[tool.ruff.lint]
ignore-init-module-imports = true

