[project]
name = "albert-api-gpt4all"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "Etalab", email = "etalab@modernisation.gouv.fr"},
]
dependencies = [
    "gpt4all==2.2.1",
    "fastapi==0.103.1",
    "uvicorn==0.23.2",
    "pyyaml==6.0.1",
]
requires-python = "==3.10.*"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore-init-module-imports = true

[tool.ruff.lint.isort.sections]
pyalbert = ["pyalbert"]
