[project]
name = "albert-api-vllm"
version = "0.1.0"
description = "Albert VLLM API"
authors = [
    {name = "Etalab", email = "etalab@mail.numerique.gouv.fr"},
]
dependencies = [
    "fastapi==0.103.1",
    "uvicorn==0.23.2",
    "vllm==0.2.1.post1",
    "xformers==0.0.22",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
